padding for sections and SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/fevicon.ico/favicon-32x32.png" style="border-radius: 50%" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio of Siddhartha Bairaboina, Full Stack Developer and Chemical Engineering student. Explore my projects, skills, and contact details.">
     <title>Siddhartha</title>
   </head>
   <body>
